--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -2,27 +2,23 @@
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://127.0.0.1/lib?useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
-jdbc.password=12345
+jdbc.password=88888888
 
 #pool settings
 jdbc.pool.init=1
 jdbc.pool.minIdle=3
 jdbc.pool.maxActive=20
 
-#jdbc.testSql=SELECT 'x'
-jdbc.testSql=SELECT 'x' FROM DUAL
+jdbc.testSql=SELECT 1
 
 #root_path
-root_path=D://soklib/
+root_path=.
 
-#mail
-mail_host=smtp.qq.com
-mail_port=587
-mail_user=416530244@qq.com
-mail_pwd=razendhwhgtibghc
-## student_yyf@163.com yyfyyf1994
-## 587 416530244@qq.com razendhwhgtibghc
-## 13574472762@163.com a13574472762
+#mail 163 mail SMTP not ssl port:25,ssl port: 465,smtp.163.com
+mail_host=smtp.163.com
+mail_port=25
+mail_user=universsky@163.com
+mail_pwd=PRVZNCPIFBQSVIZA
 
 #mahout
 server_name = localhost
